# Music-Catalog

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
backend/: .editorconfig  .env.sample  .gitignore  Pipfile  README.md  pyproject.toml
backend/public/: index.html  main.css
backend/src/: __init__.py
backend/src/api/: __init__.py
frontend/: .editorconfig  .eslintrc.json  .prettierrc.json  README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html  theme.scss
frontend/src/app/: app.component.html  app.component.ts  app.module.ts
frontend/src/app/injectors/: config.injector.ts
frontend/src/environments/: environment.development.ts  environment.ts
scripts/: install-dev.bat  install-dev.sh  install.bat  install.sh  serve.bat  serve.sh
